pkg/lang/testdata/ub/config/invalid/configurations-bare-call.ub
configurations: { aws: { default: { region: pick() } } }
